[package]
name = "obstinate"
version = "0.1.2"
edition = "2021"
description = "Experimental memory mapped like interface on top of object_store."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/winding-lines/obstinate"
authors = ["Marius S <39998+winding-lines@users.noreply.github.com>"]


[features]
# Cloud support.
"async" = []
"aws" = ["async", "object_store/aws"]
"azure" = ["async", "object_store/azure"]
"gcp" = ["async", "object_store/gcp"]
"http" = ["async", "object_store/http"]
"serde-lazy" = []


[dependencies]
memmap2 = "0.7.1"
object_store = {version="0.6.1"}
