[package]
name = "obstacle"
version = "0.0.1"
edition = "2021"
description = "Integrate the object_store crate with mmap based consumers like Polars."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/winding-lines/obstacle"
authors = ["Marius S <39998+winding-lines@users.noreply.github.com>"]


[features]
# Cloud support.
"async" = []
"aws" = ["async", "object_store/aws"]
"azure" = ["async", "object_store/azure"]
"gcp" = ["async", "object_store/gcp"]
"http" = ["async", "object_store/http"]
"serde-lazy" = []

[dev-dependencies]
aws-creds = "0.35.0"

[dependencies]
futures = "0.3.28"
futures-util = "0.3.28"
home = "0.5.5"
memmap2 = "0.7.1"
object_store = {git="https://github.com/winding-lines/arrow-rs.git", branch="feature/client-options-api"}
regex = "1.9.1"
tokio = { version="1.29.1", features = ["net", "rt-multi-thread"]}

url = "2.4.0"
uuid = {version="1.4.0", features=["v7"]}
